--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -7,6 +7,7 @@
     .cardContainer {
       display: flex;
       justify-content: space-between;
+      padding:2rem;
     }
 
     .imgContainer {
@@ -39,23 +40,11 @@
       letter-spacing: .2rem;
       line-height: 1.5rem;
     }
-  
-  
-@media only screen and (max-width: 375px) {
-    .cardContainer {
-      flex-direction: column;
-      align-items: center;
-      height: auto;
-    }
 
-    .cardIcon {
-      height:50px
+    .linkcontainer {
+      margin:1rem;
     }
-    .imgContainer {
-        display: flex;
-        flex-direction: column;
-    }
-  }
+  
 
   @media only screen and (max-width: 650px) {
 
